src/test/fail/invalid_eq.ly
#[
SyntaxError: Invalid operation: list[integer] == list[string].
Where: File "test/fail/invalid_eq.ly" at line 6
]#

[1] == ["1"]
